--- a/superEquations/version-0.5
+++ b/superEquations/version-0.5
@@ -4,6 +4,7 @@
   Version 0.5
 */
 (function(Scratch) {
+  "use strict";
 class superEquations {
   getInfo() {
     return {
@@ -32,7 +33,6 @@ class superEquations {
               },
             }
           },
-          { blockType: Scratch.BlockType.LABEL, text: "More Equations" },
       ],
             menus: {
         equationFields: [
