--- a/superEquations/version-0.5
+++ b/superEquations/version-0.5
@@ -45,7 +45,7 @@ class superEquations {
     };
   }
 
-  normalEquation() {
+  normalEquation(args) {
     let first = args.one
     let second = args.two
     if (args.EQUATION = "plus") {return (first + second)}
