--- a/superEquations/version-0.8
+++ b/superEquations/version-0.8
@@ -50,10 +50,10 @@
   normalEquation(args) {
     let first = args.one
     let second = args.two
-    if (args.EQUATION = "plus") {return (first + second)}
-    if (args.EQUATION = "minus") {return (first - second)}
-    if (args.EQUATION = "times") {return (first * second)}
-    if (args.EQUATION = "divide") {return (first / second)}
+    if (args.EQUATION == "plus") {return (first + second)}
+    if (args.EQUATION == "minus") {return (first - second)}
+    if (args.EQUATION == "times") {return (first * second)}
+    if (args.EQUATION == "divide") {return (first / second)}
   }
 }
 
