--- a/randomlyBlocks/version-1.9
+++ b/randomlyBlocks/version-1.9
@@ -157,7 +157,7 @@ Created by Mariocraft987 <scratch.mit.edu/users/mariocraft987>
 
     changeUrl(args) {
       let link = args.STR
-      if (confirm("Randomly blocks wants to redirect you to "+link) == true) {
+      if (confirm(document.URL+" want's to redirect you to "+link) == true) {
         location.href = args.STR;
       }
     }
