fix spelling errors

--- a/randomlyBlocks/version-2.2
+++ b/randomlyBlocks/version-2.2
@@ -1,6 +1,6 @@
 /*
 Under @MIT LICENSE
-Version 2.2
+Version 2.2.1
 Created by Mariocraft987 <scratch.mit.edu/users/mariocraft987>
 */
 
@@ -22,7 +22,7 @@ Created by Mariocraft987 <scratch.mit.edu/users/mariocraft987>
             arguments: {
               STR: {
                 type: Scratch.ArgumentType.STRING,
-                defaultValue: "Hello world!"
+                defaultValue: "Hello, world!"
               },
             }
           },
@@ -151,7 +151,7 @@ Created by Mariocraft987 <scratch.mit.edu/users/mariocraft987>
             arguments: {
               STR: {
                 type: Scratch.ArgumentType.STRING,
-                defaultValue: "Oops"
+                defaultValue: "Oops, a glitch apeared"
               },
             }
           },
